<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_product_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_product_is_contains_sdk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_product_is_contains_sdk_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_hardware"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_hardware_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_hardware_is_contains_goldfish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_hardware_is_contains_goldfish_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_hardware_is_contains_ranchu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_hardware_is_contains_ranchu_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_tags_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/build_tags_is_contains_test_keys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/build_tags_is_contains_test_keys_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/system_app_superuser_apk_is_exists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/system_app_superuser_apk_is_exists_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/system_xbin_su_is_exists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/system_xbin_su_is_exists_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/is_debugger_connected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/is_debugger_connected_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/waiting_for_debugger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/waiting_for_debugger_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh"/>
</LinearLayout>